src/evaluator/expression/infix/tests/snapshots/rust_monkey_interpreter__evaluator__expression__infix__tests__test_evaluator_infix_integer_expressions_case2.snap
---
source: src/evaluator/expression/infix/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::evaluator::evaluator_context::EvaluatorContext::new(),\n                           crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
[
  {},
  {
    "INTEGER": {
      "value": 20
    }
  }
]
